<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>


	<parent>
		<groupId>com.kseth</groupId>
		<artifactId>development-starter-parent</artifactId>
		<version>2.2.2</version>
	</parent>


	<groupId>com.th3hero</groupId>
	<artifactId>event-bot</artifactId>
	<version>0.0.1</version>
	<name>EventBot for Discord</name>
	<description>Demo project for Spring Boot</description>


	<properties>
		<java.version>21</java.version>
	</properties>
	<dependencies>
		<dependency>
			<groupId>com.kseth</groupId>
			<artifactId>development-starter</artifactId>
		</dependency>
		<dependency>
			<groupId>com.kseth</groupId>
			<artifactId>development-starter-test</artifactId>
		</dependency>

		<dependency>
			<groupId>com.kseth</groupId>
			<artifactId>development-starter-discord</artifactId>
		</dependency>

		<dependency>
			<groupId>com.kseth</groupId>
			<artifactId>development-starter-jpa</artifactId>
		</dependency>

		<dependency>
			<groupId>com.kseth</groupId>
			<artifactId>development-starter-rest-webmvc</artifactId>
		</dependency>

		<dependency>
			<groupId>com.kseth</groupId>
			<artifactId>development-starter-monitoring</artifactId>
		</dependency>

		<dependency>
			<groupId>org.flywaydb</groupId>
			<artifactId>flyway-core</artifactId>
		</dependency>
		<dependency>
			<groupId>org.postgresql</groupId>
			<artifactId>postgresql</artifactId>
			<scope>runtime</scope>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-quartz</artifactId>
		</dependency>

	</dependencies>

</project>
